# controller/provider/provider_controller.go
@@ -2,14 +2,15 @@ package provider
 
 import (
 	"fmt"
+
 	"github.com/NUS-EVCHARGE/ev-provider-service/dao"
 	"github.com/NUS-EVCHARGE/ev-provider-service/dto"
-	userDto "github.com/NUS-EVCHARGE/ev-user-service/dto"
 )
 
 type ProviderController interface {
-	CreateProvider(provider dto.Provider, user userDto.User) (dto.Provider, error)
-	GetProvider(user userDto.User) (dto.Provider, error)
+	CreateProvider(provider dto.Provider) (dto.Provider, error)
+	GetProvider(email string) (dto.Provider, error)
+	GetAllProvider() ([]dto.Provider, error)
 	DeleteProvider(providerId uint) error
 	UpdateProvider(provider dto.Provider) error
 }
@@ -17,15 +18,19 @@ type ProviderController interface {
 type ProviderControllerImpl struct {
 }
 
-func (p ProviderControllerImpl) CreateProvider(provider dto.Provider, user userDto.User) (dto.Provider, error) {
-	if _, err := p.GetProvider(user); err == nil {
+func (p ProviderControllerImpl) CreateProvider(provider dto.Provider) (dto.Provider, error) {
+	if _, err := p.GetProvider(provider.UserEmail); err == nil {
 		return dto.Provider{}, fmt.Errorf("provider already exist")
 	}
 	return dao.Db.CreateProviderEntry(provider)
 }
 
-func (p ProviderControllerImpl) GetProvider(user userDto.User) (dto.Provider, error) {
-	return dao.Db.GetAllProviderEntry(user.Email)
+func (p ProviderControllerImpl) GetProvider(email string) (dto.Provider, error) {
+	return dao.Db.GetProviderEntry(email)
+}
+
+func (p ProviderControllerImpl) GetAllProvider() ([]dto.Provider, error) {
+	return dao.Db.GetAllProviderEntry()
 }
 
 func (p ProviderControllerImpl) DeleteProvider(providerId uint) error {
